--- a/Src/FlyPhotosV1/Views/HelpWindow.xaml
+++ b/Src/FlyPhotosV1/Views/HelpWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="FlyPhotos.Views.HelpWindow"
+    x:Class="FlyPhotosV1.Views.HelpWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
