--- a/Src/FlyPhotosV1/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotosV1/Views/PhotoDisplayWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="FlyPhotos.Views.PhotoDisplayWindow"
+    x:Class="FlyPhotosV1.Views.PhotoDisplayWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="clr-namespace:FlyPhotos.Controls"
+    xmlns:controls="clr-namespace:FlyPhotosV1.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Fly - Photos"
