--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -32,11 +32,19 @@
             x:Name="TxtFileName"
             Width="Auto"
             Height="Auto"
-            Margin="0,0,0,20"
+            Margin="0,0,0,85"
             HorizontalAlignment="Center"
             VerticalAlignment="Bottom"
             FontSize="12"
             Foreground="White" />
+        <!--<Rectangle
+            Width="40"
+            Height="40"
+            Fill="Transparent"
+            Stroke="GreenYellow"
+            StrokeThickness="3"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"/>-->
         <StackPanel
             Width="Auto"
             Height="Auto"
