--- a/Src/FlyPhotos/Views/Settings.xaml
+++ b/Src/FlyPhotos/Views/Settings.xaml
@@ -14,6 +14,12 @@
             <PivotItem Header="General">
                 <ScrollViewer>
                     <StackPanel Orientation="Vertical">
+                        <controls:SettingsCard
+                            x:Name="SettingsCardKeyboardShortCuts"
+                            Margin="0,5,0,0"
+                            Description=""
+                            Header="KeyBoard Shortcuts"
+                            HeaderIcon="{ui:FontIcon Glyph=&#xE765;}" />
                         <TextBlock
                             Margin="0,5,0,0"
                             Style="{StaticResource SubtitleTextBlockStyle}"
@@ -136,7 +142,7 @@
                     <controls:SettingsCard
                         x:Name="SettingsCardVersion"
                         Margin="0,5,0,0"
-                        Description="Current version is 2.3.3"
+                        Description="Current version is 2.3.4"
                         Header="Current Version"
                         HeaderIcon="{ui:FontIcon Glyph=&#xF133;}">
                         <HyperlinkButton Content="Check latest version" NavigateUri="https://github.com/riyasy/FlyPhotos/releases" />
