Now bottom control panel can fade when mouse moves away from it.

--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -53,6 +53,7 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Bottom"/>-->
         <StackPanel
+            x:Name="ButtonPanel"
             Width="Auto"
             Height="Auto"
             Margin="0,0,0,50"
