async await through call chains - more Winui style. Preparation for GIF display.

--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -33,8 +33,7 @@
             Width="Auto"
             Height="40"
             HorizontalAlignment="Stretch"
-            VerticalAlignment="Bottom"
-             />
+            VerticalAlignment="Bottom" />
         <TextBlock
             x:Name="TxtFileName"
             Width="Auto"
