Settings saving to json now instead of earlier usersettings based xml. Done as the UserSettings.settings based approach uses libraries which are not AOT friendly. Saving to json is aot, non aot, packaged and non packaged friendly. It works everywhere. Removed references to Vanara Pinvoke library and instead a nativemethods.cs class is introduced. Done because vanara pinvoke is not AOT friendly. HeifReader.cs and PhotoDiskCacher.cs commented for now as the libraries they use are not AOT friendly.
The current state of code works in Native AOT form. And it seems fast.

--- a/Src/FlyPhotos/Views/Settings.xaml
+++ b/Src/FlyPhotos/Views/Settings.xaml
@@ -102,7 +102,7 @@
                                 <Slider
                                     x:Name="SliderFadeIntensity"
                                     Width="200"
-                                    IsEnabled="{Binding IsChecked, ElementName=CheckBoxEnableAutoFade}"
+                                    IsEnabled="{x:Bind ConvertNullableBoolToBool(CheckBoxEnableAutoFade.IsChecked), Mode=OneWay}"
                                     Maximum="100"
                                     Minimum="30"
                                     SmallChange="10"
